[package]
name = "libnx"
version = "0.1.0"
authors = ["XorTroll", "ischeinkman <scheinkman.ilan@gmail.com>", "Switchbrew"]
links = "nx"

[lib]
crate_type = ["rlib"]

[dependencies]
cfg-if = "0.1"
core = { version = "1.0.0", optional = true, package = 'rustc-std-workspace-core' }
compiler_builtins = { version = '0.1.2', optional = true }

[build-dependencies]
bindgen = { version = "0.37.4", optional = true }
cc = { version = "1.0.37", optional = true }
cfg-if = "0.1"
core = { version = "1.0.0", optional = true, package = 'rustc-std-workspace-core' }
compiler_builtins = { version = '0.1.2', optional = true }

[features]
default = []
twili = ["cc"]
rustc-dep-of-std = ['core', 'compiler_builtins']
